# game_controller

./: .gitignore  CLAUDE.md  COLORES_CLI_ONE_LINERS.md  COLORES_SIMULATION_COMPLETE.md  ColoresBehaviour.md  GAME_CONTROLLER_DOC_AUDIT_2026-02-13.md  GAME_CONTROLLER_PACKAGE_SOURCE_ALIGNMENT.md  HOW_TO_RUN_COLORES_SIM.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_REAL_PACKAGES.md  MANIFEST_ORGANIZATION_SUMMARY.md  P1_MATCHING_DEBUG_GUIDE.md  QUICKSTART_COLORES_SIM.md  README.md  REAL_PACKAGE_MIGRATION_DOCUMENTATION.md  docker-compose.colores-sim.yml  docker-compose.e2e.yml  docker-compose.gc_dm_integration.yml  docker-compose.isolated.yml  docker-compose.tests.yml  docker-compose.unit.yml  docker-compose.yml  legacy_games.md  legacy_ros2_integration.md  mental_model.md  plan.md
.playwright-cli/: page-2026-02-13T17-52-00-722Z.yml  page-2026-02-13T17-52-04-203Z.yml  page-2026-02-13T17-52-12-322Z.yml  page-2026-02-13T17-52-20-380Z.yml  page-2026-02-13T17-52-28-974Z.yml  page-2026-02-13T17-52-39-541Z.yml  page-2026-02-13T18-00-25-477Z.yml  page-2026-02-13T18-00-25-793Z.yml  page-2026-02-13T18-01-06-345Z.yml  page-2026-02-13T18-01-06-720Z.yml  page-2026-02-13T18-01-32-112Z.yml
audio_tts_msgs/: CMakeLists.txt
audio_tts_msgs/action/: Reaction.action  TTS.action
audio_tts_msgs/srv/: PlayWav.srv  SetVoice.srv
chatbot_msgs/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.backup  README.md  package.xml
chatbot_msgs/action/: Dialogue.action
chatbot_msgs/msg/: DialogueRole.msg
chatbot_msgs/srv/: DialogueInteraction.srv  EvaluateAnswer.srv  GetResponse.srv  KeywordAction.srv  Rephrase.srv  TopicDetection.srv
emorobcare_led_service/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py.backup
emorobcare_led_service/emorobcare_led_service/: led_client.py  led_service_node.py
emorobcare_led_service/examples/: README.md  unified_test.sh
emorobcare_led_service/launch/: led_service.launch.py
emorobcare_led_service/msg/: AvailableColors.msg
emorobcare_led_service/srv/: ControlLEDs.srv  GetLEDState.srv  PlayEffect.srv  SetLEDs.srv  SetLEDsString.srv
emorobcare_led_service/test/: test_copyright.py  test_flake8.py  test_pep257.py
game_controller/: .dockerignore  Dockerfile  Dockerfile.compose  Dockerfile.e2e  Dockerfile.isolated  EXTERNAL_CHANGES.md  README.md  package.xml  raquel_notes.md  setup.cfg  setup.py
game_controller/config/: game_controller.yaml
game_controller/docs/: architecture.md  configuration.md  game_content.md  index.md  state_machine.md  ui_integration.md
game_controller/game_controller/: __init__.py  auto_advance.py  chatbot_client.py  decision_events.py  expressive_say_bridge_mock.py  input_translation.py  node.py  persistence.py  speech_gate.py  tts_client.py  tts_mock_node.py  ui_intent_bridge.py
game_controller/game_controller/content/: __init__.py  builder.py  correctness.py  loaders.py  option_generation.py  profiles.py
game_controller/game_controller/models/: __init__.py  difficulty.py  game.py  option.py  phase.py  state.py
game_controller/game_controller/phases/: __init__.py  base.py  choice.py  discrimination.py  pointing.py  registry.py  yes_no.py
game_controller/game_controller/ui/: __init__.py  manifest_builder.py  manifest_client.py
game_controller/games/: animales.json  animales.yaml  atencion.json  atencion.yaml  colores.json  colores.yaml  donde_esta.json  donde_esta.yaml  emociones.json  emociones.yaml  encuentra_objetos.json  encuentra_objetos.yaml  formas.json  formas.yaml  quiero.json  quiero.yaml
game_controller/games/answers/: animals.json  colours.json  emotions.json  fruits.json  locations.json  objects.json  shapes.json  wants.json
game_controller/games/phases/: generalPhases.json  generalPhases.yaml
game_controller/games/profiles/: chatbot.json  diagnostics.json  general.json  robot_expression.json  tts.json  vision.json
game_controller/launch/: game_controller.launch.py
game_controller/stub_chatbot_msgs/: CMakeLists.txt  package.xml
game_controller/stub_chatbot_msgs/srv/: EvaluateAnswer.srv  GetResponse.srv  KeywordAction.srv  Rephrase.srv
game_controller/stub_generic_ui_interfaces/: CMakeLists.txt  package.xml
game_controller/stub_generic_ui_interfaces/srv/: GetManifest.srv
game_controller/stub_hri_actions_msgs/: CMakeLists.txt  package.xml
game_controller/stub_hri_actions_msgs/msg/: Intent.msg
game_controller/test/: test_asset_url_rewriting.py  test_auto_advance.py  test_builder.py  test_chatbot_client.py  test_complete_state_coverage.py  test_correctness.py  test_decision_state_payloads.py  test_fsm_transitions.py  test_input_translation.py  test_manifest_builder.py  test_manifest_builder_correct_and_images.py  test_manifest_update_sequence.py  test_node_refactor_helpers.py  test_node_ui_phase_injection.py  test_option_generation.py  test_p1_matching_gate.py  test_speech_gate.py  test_transaction_gating.py  validate_manifest_structure.py
game_controller/test/e2e/: README.md  e2e_utils.py  run_e2e_tests.py  test_game_controller_e2e.py  test_game_flow_e2e.py
led_service_mock/: package.xml  setup.cfg  setup.py
led_service_mock/led_service_mock/: node.py
leds_ros/: CMakeLists.txt  package.xml
leds_ros/scripts/: led_service_node.py
leds_ros/srv/: ControlLEDs.srv  GetLEDState.srv  PlayEffect.srv  SetLEDs.srv
llm_service_mock/: package.xml  setup.cfg  setup.py
llm_service_mock/llm_service_mock/: node.py
test/: Dockerfile.gc_dm_integration  Dockerfile.mocks  Dockerfile.test  Dockerfile.test_isolated  README.md  run_isolated_tests.sh  validate_colores_runtime_live.py  verify_integration_results.py
test/integration/: MANIFEST_ORGANIZATION.md  README_COLORES_SIM.md  __init__.py  analyze_gc_dm_logs.py  mock_expressive_say_server.py  organize_manifests_for_ui.py  run_and_organize.sh  run_gc_dm_manifest_integration.py  simulate_colores_full_game.py  test_game_flow.py  test_isolated_integration.py  validate_colores_sim.sh
test/mocks/: __init__.py  mock_decision_making.py  mock_generic_ui.py
test/results/: ACTUAL_RUNTIME_STATE.md  actual_compose_ps.txt  isolated_results.xml  (+21 more)
(+2 files in other folders)
