<?xml version="1.0"?>
<package format="3">
  <name>game_controller</name>
  <version>1.0.0</version>
  <description>ROS 2 game controller that orchestrates the Colors (Colores) game using the decision_making FSM and generic_ui</description>
  <maintainer email="emorobcare@example.com">EMOROBOCARE</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>generic_ui_interfaces</depend>
  <depend>hri_actions_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
