<?xml version="1.0"?>
<package format="3">
  <name>led_service_mock</name>
  <version>0.1.0</version>
  <description>Simple web UI to interact with emorobcare_led_service.</description>
  <maintainer email="emorobcare@example.com">EMOROBCARE</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>emorobcare_led_service</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
