<?xml version="1.0"?>
<package format="3">
  <name>emorobcare_led_service</name>
  <version>0.1.0</version>
  <description>In-memory LED service implementation used by local compose stacks.</description>

  <maintainer email="dev@example.com">EmorobCare</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>ament_cmake_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
