<?xml version="1.0"?>
<package format="3">
  <name>llm_service_mock</name>
  <version>0.1.0</version>
  <description>Mock chatbot service provider for local development.</description>
  <maintainer email="emorobcare@example.com">EMOROBCARE</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>chatbot_msgs</depend>
  <depend>hri_actions_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
